Unhide the +/- zoom control using the mobile/desktop breakpoint, and align the edge of the map correctly to the top menu. Closes #41

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ video {
   width: 100vw;
   overflow: hidden;
   position: fixed;
-  top: 0;
+  top: $menu-height + 16;
   right: 0;
   left: 0;
 
@@ -35,8 +35,11 @@ video {
 }
 
 .leaflet-control-container {
-  display: none;
+  @media (max-width: $mobile_breakpoint) {
+    display: none;
+  }
 }
+
 .leaflet-control-attribution {
   display: none;
 }
